--- a/.Demo2.md.html
+++ b/.Demo2.md.html
@@ -644,15 +644,15 @@ function setDocumentScrollTop(ypos)
 <h3> <a id="内嵌式链接" class="anchor" href="#%E5%86%85%E5%B5%8C%E5%BC%8F%E9%93%BE%E6%8E%A5" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>内嵌式链接</h3> 
 <ul> 
  <li>外部链接：<a href="https://github.com/sunshaochen/MarkDown">我的MarkDown</a> </li> 
- <li>内部链接1,链接到仓库的其他文件：<a href=".demo1.md.html">demo1</a> </li> 
- <li>内部链接2,链接本文档的其他部分：<a href=".demo2.md.html#代码块">代码块</a> </li> 
+ <li>内部链接1,链接到仓库的其他文件：<a href=".Demo1.md.html">demo1</a> </li> 
+ <li>内部链接2,链接本文档的其他部分：<a href=".Demo2.md.html#代码块">代码块</a> </li> 
 </ul> 
 <h3> <a id="引用式链接" class="anchor" href="#%E5%BC%95%E7%94%A8%E5%BC%8F%E9%93%BE%E6%8E%A5" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>引用式链接</h3> 
 <ul> 
  <li>外部链接：<a href="https://github.com/sunshaochen/MarkDown">我的MarkDown</a> </li> 
  <li>外部链接：<a href="https://github.com/sunshaochen/MarkDown">我的MarkDown</a> </li> 
- <li>内部链接1,链接到仓库的其他文件：<a href=".demo1.md.html">demo1</a> </li> 
- <li>内部链接2,链接本文档的其他部分：<a href=".demo2.md.html#代码块">代码块</a> </li> 
+ <li>内部链接1,链接到仓库的其他文件：<a href=".Demo1.md.html">demo1</a> </li> 
+ <li>内部链接2,链接本文档的其他部分：<a href=".Demo2.md.html#代码块">代码块</a> </li> 
 </ul> 
 <h2> <a id="图片" class="anchor" href="#%E5%9B%BE%E7%89%87" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>图片</h2> 
 <ul> 
