分割线，表格，emoji

--- a/.Demo3.md.html
+++ b/.Demo3.md.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>H:\Workspaces\MarkDown\.Demo2.md.html</title>
+<title>H:\Workspaces\MarkDown\.Demo3.md.html</title>
 
 
 <style type="text/css">
@@ -639,30 +639,81 @@ function setDocumentScrollTop(ypos)
 
 </head>
 <body class="markdown-body">
-<h1> <a id="demo2" class="anchor" href="#demo2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Demo2</h1> 
-<h2> <a id="链接" class="anchor" href="#%E9%93%BE%E6%8E%A5" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>链接</h2> 
-<h3> <a id="内嵌式链接" class="anchor" href="#%E5%86%85%E5%B5%8C%E5%BC%8F%E9%93%BE%E6%8E%A5" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>内嵌式链接</h3> 
+<h1> <a id="demo3" class="anchor" href="#demo3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>demo3</h1> 
+<h2> <a id="水平分割线" class="anchor" href="#%E6%B0%B4%E5%B9%B3%E5%88%86%E5%89%B2%E7%BA%BF" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>水平分割线</h2> 
+<pre><code>&lt;hr&gt; Horiznotal Rule
+</code></pre> 
+<hr /> 
+<pre><code>&lt;hr&gt; Horiznotal Rule
+</code></pre> 
+<hr /> 
+<pre><code>&lt;hr&gt; Horiznotal Rule
+</code></pre> 
+<hr /> 
+<h2> <a id="html-代码" class="anchor" href="#html-%E4%BB%A3%E7%A0%81" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>HTML 代码</h2> 
+<p align="center">Hello World</p> 
+<h2> <a id="表格" class="anchor" href="#%E8%A1%A8%E6%A0%BC" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>表格</h2> 
+<table> 
+ <thead> 
+  <tr> 
+   <th>这</th> 
+   <th align="center">是</th> 
+   <th align="right">表头</th> 
+  </tr> 
+ </thead> 
+ <tbody> 
+  <tr> 
+   <td>cell1</td> 
+   <td align="center">cell2</td> 
+   <td align="right">cell3</td> 
+  </tr> 
+  <tr> 
+   <td><strong>row2</strong></td> 
+   <td align="center">row2</td> 
+   <td align="right">row2</td> 
+  </tr> 
+  <tr> 
+   <td>img</td> 
+   <td align="center"><a href="imgs/1.JPG" target="_blank"><img src="imgs/1.JPG" alt="MyLove" title="MyLove" style="max-width:100%;" /></a></td> 
+   <td align="right"><a href="https://sunshaochen.github.io/LoveIn520/">520</a></td> 
+  </tr> 
+ </tbody> 
+</table> 
+<hr /> 
+<table> 
+ <thead> 
+  <tr> 
+   <th>这</th> 
+   <th align="center">是</th> 
+   <th align="right">表头</th> 
+  </tr> 
+ </thead> 
+ <tbody> 
+  <tr> 
+   <td>cell1</td> 
+   <td align="center">cell2</td> 
+   <td align="right">cell3</td> 
+  </tr> 
+  <tr> 
+   <td>row2</td> 
+   <td align="center">row2</td> 
+   <td align="right">row2</td> 
+  </tr> 
+ </tbody> 
+</table> 
+<h2> <a id="gfm" class="anchor" href="#gfm" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>GFM</h2> 
+<p>Github Flvored Markdown, GFM</p> 
+<p>task list</p> 
 <ul> 
- <li>外部链接：<a href="https://github.com/sunshaochen/MarkDown">我的MarkDown</a> </li> 
- <li>内部链接1,链接到仓库的其他文件：<a href=".Demo1.md.html">demo1</a> </li> 
- <li>内部链接2,链接本文档的其他部分：<a href=".Demo2.md.html#代码块">代码块</a> </li> 
+ <li>[ ] task 1</li> 
+ <li>[ ] task 2</li> 
+ <li>[ ] task 3</li> 
 </ul> 
-<h2> <a id="图片" class="anchor" href="#%E5%9B%BE%E7%89%87" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>图片</h2> 
-<ul> 
- <li>图片的MarkDown语法<br /> ![alt](url text)</li> 
- <li>外部图片demo<br /> <a href="https://camo.githubusercontent.com/b2661b4f1be710fd9c21914e82e95b6041ea74db/68747470733a2f2f677373302e62647374617469632e636f6d2f373035316379373932736743704e4b6670555f595f44332f7374617469632f636f6d6d6f6e2f7769646765742f7365617263682d626f782d6e65772f696d672f6c6f676f2d7a686964616f5f623264613038372e706e673f5f5f737072697465" target="_blank"><img src="https://camo.githubusercontent.com/b2661b4f1be710fd9c21914e82e95b6041ea74db/68747470733a2f2f677373302e62647374617469632e636f6d2f373035316379373932736743704e4b6670555f595f44332f7374617469632f636f6d6d6f6e2f7769646765742f7365617263682d626f782d6e65772f696d672f6c6f676f2d7a686964616f5f623264613038372e706e673f5f5f737072697465" alt="baiduZhidao" title="百度知道" data-canonical-src="https://gss0.bdstatic.com/7051cy792sgCpNKfpU_Y_D3/static/common/widget/search-box-new/img/logo-zhidao_b2da087.png?__sprite" style="max-width:100%;" /></a> </li> 
- <li>仓库内部的图片demo<br /> <a href="imgs/1.JPG" target="_blank"><img src="imgs/1.JPG" alt="MyLove" title="MyLove" style="max-width:100%;" /></a> </li> 
-</ul> 
-<h2> <a id="引用" class="anchor" href="#%E5%BC%95%E7%94%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>引用</h2> 
-<h3> <a id="引用式链接" class="anchor" href="#%E5%BC%95%E7%94%A8%E5%BC%8F%E9%93%BE%E6%8E%A5" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>引用式链接</h3> 
-<ul> 
- <li>外部链接：<a href="https://github.com/sunshaochen/MarkDown">我的MarkDown</a> </li> 
- <li>外部链接：<a href="https://github.com/sunshaochen/MarkDown">我的MarkDown</a> </li> 
- <li>内部链接1,链接到仓库的其他文件：<a href=".Demo1.md.html">demo1</a> </li> 
- <li>内部链接2,链接本文档的其他部分：<a href=".Demo2.md.html#代码块">代码块</a> </li> 
-</ul> 
-<h3> <a id="图片的引用式链接" class="anchor" href="#%E5%9B%BE%E7%89%87%E7%9A%84%E5%BC%95%E7%94%A8%E5%BC%8F%E9%93%BE%E6%8E%A5" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>图片的引用式链接</h3> 
-<p><a href="https://camo.githubusercontent.com/b2661b4f1be710fd9c21914e82e95b6041ea74db/68747470733a2f2f677373302e62647374617469632e636f6d2f373035316379373932736743704e4b6670555f595f44332f7374617469632f636f6d6d6f6e2f7769646765742f7365617263682d626f782d6e65772f696d672f6c6f676f2d7a686964616f5f623264613038372e706e673f5f5f737072697465" target="_blank"><img src="https://camo.githubusercontent.com/b2661b4f1be710fd9c21914e82e95b6041ea74db/68747470733a2f2f677373302e62647374617469632e636f6d2f373035316379373932736743704e4b6670555f595f44332f7374617469632f636f6d6d6f6e2f7769646765742f7365617263682d626f782d6e65772f696d672f6c6f676f2d7a686964616f5f623264613038372e706e673f5f5f737072697465" alt="baiduZhidao" data-canonical-src="https://gss0.bdstatic.com/7051cy792sgCpNKfpU_Y_D3/static/common/widget/search-box-new/img/logo-zhidao_b2da087.png?__sprite" style="max-width:100%;" /></a></p> 
-<h2> <a id="代码块" class="anchor" href="#%E4%BB%A3%E7%A0%81%E5%9D%97" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>代码块</h2>
+<p>emoji 表情符号</p> 
+<p>:emoji code:</p> 
+<p>
+ <g-emoji alias="dress" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f457.png" ios-version="6.0">
+  👗
+ </g-emoji></p>
 </body>
 </html>
