--- a/.Demo3.md.html
+++ b/.Demo3.md.html
@@ -706,7 +706,7 @@ function setDocumentScrollTop(ypos)
 <p>task list</p> 
 <ul> 
  <li>[ ] task 1</li> 
- <li>[ ] task 2</li> 
+ <li>[x] task 2</li> 
  <li>[ ] task 3</li> 
 </ul> 
 <p>emoji 表情符号</p> 
